--- a/zoo.css
+++ b/zoo.css
@@ -23,7 +23,9 @@ a{
 	float: right;
 }
 
-@media (max-width: 600px){
+@media only screen 
+and (max-width: 600px){
+
 
 	#menu{
 		background-color: blue;
