--- a/zoo.css
+++ b/zoo.css
@@ -9,8 +9,9 @@ html,body{
 
 #navbar{
 	background-color: white; 
-	padding: 15px;
 	text-align: center;
+	position: absolute;
+	width: 100%;
 }
 
 
@@ -21,6 +22,7 @@ a{
 	font-size: 20px;
 	text-decoration: none;
 	float: left;
+	padding: 0 15px;
 }
 
 h1{
@@ -80,6 +82,17 @@ h1{
 	margin-top: 100px;
 	width: 100%;
 }
+
+#pictureSection{
+	background-color: yellow;
+	height: 100vh;
+}
+
+#mapSection{
+	background-color: green;
+	height: 100vh;
+}
+
 
 @media only screen 
 and (max-width: 600px){
