--- a/zoo.css
+++ b/zoo.css
@@ -84,12 +84,12 @@ h1{
 }
 
 #pictureSection{
-	background-color: yellow;
+	background-color: #CEB67E;
 	height: 100vh;
 }
 
 #mapSection{
-	background-color: green;
+	background-color: #a36718;
 	height: 100vh;
 }
 
