--- a/zoo.css
+++ b/zoo.css
@@ -95,20 +95,35 @@ h1{
 }
 
 .pictures{
-	height: 50%;
+	height: 40%;
 	width: 30%;
 	margin: 15px 15px;
 }
 
 .pictures img{
-	max-height: 100%;
-	max-width: 100%;
+	height: 100%;
+	width: 100%;
 }
 
-#mapSection{
+.mapSection{
 	background-color: #a36718;
 	height: 100vh;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
+
+.map{
+	height: 80%;
+	width: 80%;
+}
+
+.map img{
+	height: 100%;
+	width: 100%;
+}
+
 
 
 @media only screen 
