--- a/zoo.css
+++ b/zoo.css
@@ -10,7 +10,7 @@ html,body{
 #navbar{
 	background-color: white; 
 	text-align: center;
-	position: absolute;
+	position: fixed;
 	width: 100%;
 }
 
@@ -64,6 +64,8 @@ h1{
 
 .dropdownShown{
 	display: block;
+	position: fixed;
+	margin-top: 25px;
 }
 
 #homeSection{
